components/py3ocp7ai-svc/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: py3ocp7ai-svc
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: py3ocp7ai-svc 
  name: py3ocp7ai-svc
spec:
  port:
    targetPort: 8081 
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: py3ocp7ai-svc
    weight: 100
